<resources>
    <string name="app_name">Taifun</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Taifun</string>
    <string name="nav_header_subtitle">+79231413131</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="food">Food</string>
    <string name="promo">Promo</string>
    <string name="orders">Orders</string>
    <string name="my_info">My info</string>
    <string name="my_name">My name</string>
    <string name="my_phone">My phone</string>
    <string name="addresses">Addresses</string>
    <string name="image_for_promo">image for promo</string>
    <string name="title_activity_food_info">Food info</string>
    <string name="add_to_order">Add to order</string>
    <string name="ingredients">Ingredients</string>
    <plurals name="order_count_update">
        <item quantity="one">Now there are %1$d item in order</item>
        <item quantity="other">Now there are %1$d items in order</item>
    </plurals>
    <string name="weight">Weight: %1$d gr.</string>
    <string name="title_activity_order_info">Order Info</string>
    <string name="title_activity_order_confirmation">Order Confirmation</string>
    <string name="address_title_home">Home</string>
    <string name="no_price">unavailable</string>
    <string name="order_finished_at">Finished at %1$s</string>
    <string name="in_progress">In progress (created at %1$s)</string>
    <string name="order_placed">Order placed</string>
    <string name="order_confirmed">Order confirmed</string>
    <string name="order_processed">Order processed</string>
    <string name="ready_to_pickup">Ready to pickup</string>
    <string name="order_number_invalid">invalid order number</string>
    <string name="order_number"># %1$s</string>
    <string name="title_activity_order_details">Order details</string>
    <string name="subtotal">Subtotal:</string>
    <string name="discount">Discount:</string>
    <string name="total">Total:</string>
    <plurals name="pcs">
        <item quantity="one">%1$d pc.</item>
        <item quantity="other">%1$d pcs.</item>
    </plurals>
    <string name="money">$ %1$s</string>
    <string name="increase_food_count_by_one">Increase food count by one</string>
    <string name="decrease_food_count_by_one">Decrease food count by one</string>
    <string name="order_content">Order content</string>
    <string name="food_image">food image</string>
    <string name="additional_info">Additional info:</string>
    <string name="delivery">Delivery:</string>
    <string name="to_address">To address</string>
    <string name="pick_up_in_cafe">Pick up in cafe</string>
    <string name="schedule">Schedule</string>
    <string name="edit_address">edit address</string>
    <string name="delivery_price">Delivery price:</string>
    <string name="free">free</string>
    <string name="food_list_is_not_ready_yet">Food list is not ready yet</string>
    <string name="how_about_taifun_food">How about Taifun food?</string>
    <string name="delete_address">Delete address</string>
    <string name="make_address_default">make address default</string>
    <string name="add_address">Add address</string>
    <string name="update">Update</string>
    <string name="address_s">Address:</string>
    <string name="no_selected_address">Please select the address to deliver</string>
    <string name="order_is_not_ready">order is not ready. Inner error</string>
    <plurals name="dishes_count">
        <item quantity="zero">No dishes in order</item>
        <item quantity="one">%1$d dish in order</item>
        <item quantity="other">%1$d dishes in order</item>
    </plurals>
</resources>
