<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_food"
            android:icon="@drawable/ic_if_food"
            android:title="@string/food" />
        <item
            android:id="@+id/nav_promo"
            android:icon="@drawable/ic_if_coupons"
            android:title="@string/promo" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_if_delivery"
            android:title="@string/orders" />
        <item
            android:id="@+id/nav_my_info"
            android:icon="@drawable/ic_if_my_info"
            android:title="@string/my_info" />
    </group>

</menu>
