<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/swipe"
    tools:context=".OrderStatusActivityFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    <TextView
        android:id="@+id/order_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        tools:text="# 123"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/order_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        tools:text="Order in progress..."
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/order_number"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/order_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/order_time" />

    <ImageView
        android:contentDescription="@null"
        android:id="@+id/image_basket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_if_basket"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/order_content" />

    <TextView
        android:id="@+id/text_basket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/order_placed"
        app:layout_constraintBottom_toBottomOf="@+id/image_basket"
        app:layout_constraintStart_toEndOf="@+id/image_basket"
        app:layout_constraintTop_toTopOf="@+id/image_basket" />

    <TextView
        android:id="@+id/order_status_placed_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        tools:text="12:20"
        app:layout_constraintBottom_toBottomOf="@+id/text_basket"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_basket" />

    <ImageView
        android:id="@+id/image_done"
        android:contentDescription="@null"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_done"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_basket" />

    <TextView
        android:id="@+id/text_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/order_confirmed"
        app:layout_constraintBottom_toBottomOf="@+id/image_done"
        app:layout_constraintStart_toEndOf="@+id/image_done"
        app:layout_constraintTop_toTopOf="@+id/image_done" />

    <TextView
        android:id="@+id/order_status_confirmed_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        tools:text="12:20"
        app:layout_constraintBottom_toBottomOf="@+id/text_done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_done" />

    <ImageView
        android:id="@+id/image_prepair"
        android:contentDescription="@null"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_timelapse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_done" />

    <TextView
        android:id="@+id/text_prepair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/order_processed"
        app:layout_constraintBottom_toBottomOf="@+id/image_prepair"
        app:layout_constraintStart_toEndOf="@+id/image_prepair"
        app:layout_constraintTop_toTopOf="@+id/image_prepair" />

    <TextView
        android:id="@+id/order_status_prepir_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_prepair"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_prepair"
        tools:text="12:20" />

    <ImageView
        android:id="@+id/image_pickup_ready"
        android:contentDescription="@null"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_ready"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_prepair" />

    <TextView
        android:id="@+id/text_pickup_ready"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/ready_to_pickup"
        app:layout_constraintBottom_toBottomOf="@+id/image_pickup_ready"
        app:layout_constraintStart_toEndOf="@+id/image_pickup_ready"
        app:layout_constraintTop_toTopOf="@+id/image_pickup_ready" />

    <TextView
        android:id="@+id/order_status_pickup_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_pickup_ready"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_pickup_ready"
        tools:text="12:20" />
</android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.SwipeRefreshLayout>